--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>guided-code-path</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <title>BuildStack</title>
+    <meta name="description" content="Transform your dreams into code with hands-on projects" />
+    <meta name="author" content="BuildStack" />
 
-    <meta property="og:title" content="guided-code-path" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="BuildStack" />
+    <meta property="og:description" content="Transform your dreams into code with hands-on projects" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/icon.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@buildstack" />
+    <meta name="twitter:image" content="/icon.png" />
   </head>
 
   <body>
